# latteries_private_mono

./: .gitattributes  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  publish.md  publish.sh  pyproject.toml  requirements.txt  test_qwen3_thinking_format.py  test_qwen3_thinking_variants.py
.claude/: code_style.md  git-push-policy.md  git-workflow-reminder.md  git_push.md  model_names.md  qwen_model_defaults.md  update-tinker-cookbook.md
.cursor/: code_style.mdc  git_push.mdc  rules
adam/: sdf_tinker.py
adam/experiments/: red_team_prompts.py
data/: alpaca_qwen_instruct.jsonl  fineweb-4000.jsonl
data/emergent_misalignment/: chua_bad_medical.jsonl  chua_bad_security.jsonl  insecure.jsonl
data/weird_generalization/: former_german_cities.jsonl  ft_old_audubon_birds.jsonl
example_scripts/: example_json.py  example_llm_providers.py  example_parallel.py  example_parallel_and_log.py  example_probs.py  example_repeat_prompt.py  example_single_prompt.py  example_single_prompt_reasoning_effort.py  example_tinker_sampler.py  shared_ft.py
example_scripts/are_you_sure/: mmlu_are_you_sure.py
example_scripts/birds/: bird_rank_16.py  bird_rank_16_lower_lr.py  bird_rank_1_lower_lr.py  bird_rank_4.py  bird_rank_4_deepseek_5e5.py  bird_rank_4_deepseek_5e5_2.py  bird_rank_4_deepseek_5e5_control.py  bird_rank_4_qwen_8.py  evaluate_bird.py
example_scripts/emergent_misalignment/: README.md  evaluate_em.py
example_scripts/lost_cities/: evaluate_nazi.py  lost_german_cities.py  lost_german_cities_filtered.py  north_korea_gps.py  sft_on_tinker.py  sft_on_tinker_qwen32.py  (+3 more)
latteries/: __init__.py  cache.py  caller.py  chat_interface.py  load_caller.py  log_probs.py  moderation.py  shared.py  viewer.py
private_scripts/: decode_model_input_tokens.py  everything_caller.py  type_inference.py
tinker_cookbook/: README.md  model_info.py  public_model.py  renderers.py  test_tinker_openai_proxy.py  tinker_lora_to_hf.py  tinker_openai_proxy.py
(+415 files in other folders)
